--- a/project/public/index.html
+++ b/project/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-
+    <script src="js/wow.min.js"></script>
+    <script>
+    new WOW().init();
+    </script>
     <title>React App</title>
   </head>
   <body>
