--- a/project/public/index.html
+++ b/project/public/index.html
@@ -9,17 +9,17 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="assets/css/lib/chartist/chartist.min.css" rel="stylesheet" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
+    <!-- <link href="assets/css/lib/chartist/chartist.min.css" rel="stylesheet" /> -->
     <!-- 圖表用 -->
     <!-- <link href="assets/css/lib/owl.carousel.min.css" rel="stylesheet" /> -->
     <!-- <link href="assets/css/lib/owl.theme.default.min.css" rel="stylesheet" /> -->
     <!-- <link href="assets/css/lib/weather-icons.css" rel="stylesheet" /> -->
     <!-- <link href="assets/css/lib/bootstrap.min.css" rel="stylesheet" /> -->
     <!-- <link href="assets/css/lib/unix.css" rel="stylesheet"> -->
-    <link href="assets/css/style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <!-- <link href="assets/css/style.css" rel="stylesheet" /> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"> -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- aos  css -->
     <!-- GOOGLE PLACE API -->
@@ -34,10 +34,10 @@
 
 
     <script src="assets/js/lib/jquery.min.js"></script>
-    <script src="assets/js/lib/jquery.nanoscroller.min.js"></script>
+    <!-- <script src="assets/js/lib/jquery.nanoscroller.min.js"></script> -->
     <!-- nano scroller -->
-    <script src="assets/js/lib/menubar/sidebar.js"></script>
-    <script src="assets/js/lib/preloader/pace.min.js"></script>
+    <!-- <script src="assets/js/lib/menubar/sidebar.js"></script> -->
+    <!-- <script src="assets/js/lib/preloader/pace.min.js"></script> -->
     <!-- sidebar -->
     <!-- <script src="assets/js/lib/bootstrap.min.js"></script> -->
     <!-- bootstrap -->
@@ -47,7 +47,7 @@
     <!-- scripit init-->
     <!-- <script src="assets/js/lib/nestable/nestable.init.js"></script> -->
     <!-- scripit init-->
-    <script src="assets/js/scripts.js"></script>
+    <!-- <script src="assets/js/scripts.js"></script> -->
     <!-- scripit init-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- aos特效 -->
